@@ -12,6 +12,7 @@
 - Added AddPseudoFrobeniusNumberToIdeal
 - Added NormalizedIdeals for a numerical semigroup
 - Added KunzCoordinates for an ideal of a numerical semigroup (and optionally an element in the ambient semigroup)
+- Added RemoveMinimalGeneratorFromIdeal
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
